@@ -134,6 +134,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 18585) Added a bunch of parameters to the revertpage message
 * Support redirects in image namespace
 * (bug 10049) Prefix index search and namespaces in Special:Withoutinterwiki
+* (bug 12668) Support for custom iPhone bookmark icon via $wgAppleTouchIcon
+
 
 === Bug fixes in 1.12 ===
 
